welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: identifier expected but integer literal found.
 	if ( day == 0 ) return 10:00;
                                  ^